# models/query.go
@@ -2,4 +2,5 @@ package models
 
 // Query ...
 type Query struct {
+	TitleFragment string
 }
